--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -16,6 +16,7 @@ body {
     left: 0;
     border: 0;
     z-index: 1000;
+//    background-image: url("../images/development_ribbon.png");
     background-position: center center;
     background-repeat: no-repeat;
 }
